initial/src/main/minigo/parser/.antlr/MiniGoParser.py
# Generated from c:/Users/atom0/OneDrive/Documents/GitHub/python/PPL/assignment3/initial/src/main/minigo/parser/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'func'", "'if'", "'break'", "'else'", 
                     "'for'", "'return'", "'type'", "'struct'", "'interface'", 
                     "'const'", "'var'", "'continue'", "'range'", "'nil'", 
                     "'true'", "'false'", "'int'", "'string'", "'float'", 
                     "'boolean'", "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", 
                     "'!='", "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", 
                     "'!'", "':'", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "':='", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "','", "';'" ]

    symbolicNames = [ "<INVALID>", "FUNC", "IF", "BREAK", "ELSE", "FOR", 
                      "RETURN", "TYPE", "STRUCT", "INTERFACE", "CONST", 
                      "VAR", "CONTINUE", "RANGE", "NIL", "TRUE", "FALSE", 
                      "INT_TYPE", "STRING_TYPE", "FLOAT_TYPE", "BOOL_TYPE", 
                      "PLUS", "MINUS", "MULT", "DIV", "MOD", "EQUALS", "NOT_EQUALS", 
                      "LESS", "LESS_EQUALS", "GREATER", "GREATER_EQUALS", 
                      "LOGICAL_AND", "LOGICAL_OR", "LOGICAL_NOT", "COLON", 
                      "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
                      "DIV_ASSIGN", "MOD_ASSIGN", "DECLARE_ASSIGN", "ACCESS", 
                      "L_PAREN", "R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", 
                      "R_BRACKET", "COMMA", "SEMI", "ID", "DECIMAL_LIT", 
                      "BINARY_LIT", "OCTAL_LIT", "HEX_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "TERMINATOR", "WS", "LINE_COMMENT", 
                      "COMMENT", "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_top_level_decl = 2
    RULE_decl = 3
    RULE_stmt_list = 4
    RULE_stmt = 5
    RULE_lhs = 6
    RULE_lhs_prime = 7
    RULE_lhs_ele = 8
    RULE_return_stmt = 9
    RULE_call_stmt = 10
    RULE_func_call = 11
    RULE_continue_stmt = 12
    RULE_break_stmt = 13
    RULE_if_stmt = 14
    RULE_for_stmt = 15
    RULE_for_clause = 16
    RULE_init_stmt = 17
    RULE_cond_stmt = 18
    RULE_update_stmt = 19
    RULE_for_ICU_clause = 20
    RULE_for_range_clause = 21
    RULE_for_idx = 22
    RULE_for_val = 23
    RULE_for_array = 24
    RULE_assignment = 25
    RULE_assign_op = 26
    RULE_block = 27
    RULE_funcdecl = 28
    RULE_func_params = 29
    RULE_func_params_list = 30
    RULE_func_param = 31
    RULE_return_type = 32
    RULE_expr_params = 33
    RULE_constdecl = 34
    RULE_const_spec = 35
    RULE_vardecl = 36
    RULE_var_spec = 37
    RULE_id_list = 38
    RULE_expr_list = 39
    RULE_type_ = 40
    RULE_type_lit = 41
    RULE_complex_type = 42
    RULE_list_type = 43
    RULE_type_name = 44
    RULE_complex_lit = 45
    RULE_list_val = 46
    RULE_complex_val = 47
    RULE_key_element_list = 48
    RULE_element_list = 49
    RULE_keyed_element = 50
    RULE_field_name = 51
    RULE_element = 52
    RULE_type_decl = 53
    RULE_type_spec = 54
    RULE_interface_type = 55
    RULE_method_decl = 56
    RULE_method_spec = 57
    RULE_receiver = 58
    RULE_method_type = 59
    RULE_method_list = 60
    RULE_method = 61
    RULE_method_params = 62
    RULE_method_param_prime = 63
    RULE_method_param = 64
    RULE_method_call = 65
    RULE_struct_type = 66
    RULE_field_prime = 67
    RULE_slice_type = 68
    RULE_array_type = 69
    RULE_array_decl = 70
    RULE_array_len = 71
    RULE_single_type = 72
    RULE_literal = 73
    RULE_primitive_lit = 74
    RULE_integer = 75
    RULE_operand = 76
    RULE_primary_expr = 77
    RULE_index = 78
    RULE_unary_op = 79
    RULE_mul_op = 80
    RULE_add_op = 81
    RULE_compare_op = 82
    RULE_expr = 83
    RULE_eos = 84

    ruleNames =  [ "program", "decl_list", "top_level_decl", "decl", "stmt_list", 
                   "stmt", "lhs", "lhs_prime", "lhs_ele", "return_stmt", 
                   "call_stmt", "func_call", "continue_stmt", "break_stmt", 
                   "if_stmt", "for_stmt", "for_clause", "init_stmt", "cond_stmt", 
                   "update_stmt", "for_ICU_clause", "for_range_clause", 
                   "for_idx", "for_val", "for_array", "assignment", "assign_op", 
                   "block", "funcdecl", "func_params", "func_params_list", 
                   "func_param", "return_type", "expr_params", "constdecl", 
                   "const_spec", "vardecl", "var_spec", "id_list", "expr_list", 
                   "type_", "type_lit", "complex_type", "list_type", "type_name", 
                   "complex_lit", "list_val", "complex_val", "key_element_list", 
                   "element_list", "keyed_element", "field_name", "element", 
                   "type_decl", "type_spec", "interface_type", "method_decl", 
                   "method_spec", "receiver", "method_type", "method_list", 
                   "method", "method_params", "method_param_prime", "method_param", 
                   "method_call", "struct_type", "field_prime", "slice_type", 
                   "array_type", "array_decl", "array_len", "single_type", 
                   "literal", "primitive_lit", "integer", "operand", "primary_expr", 
                   "index", "unary_op", "mul_op", "add_op", "compare_op", 
                   "expr", "eos" ]

    EOF = Token.EOF
    FUNC=1
    IF=2
    BREAK=3
    ELSE=4
    FOR=5
    RETURN=6
    TYPE=7
    STRUCT=8
    INTERFACE=9
    CONST=10
    VAR=11
    CONTINUE=12
    RANGE=13
    NIL=14
    TRUE=15
    FALSE=16
    INT_TYPE=17
    STRING_TYPE=18
    FLOAT_TYPE=19
    BOOL_TYPE=20
    PLUS=21
    MINUS=22
    MULT=23
    DIV=24
    MOD=25
    EQUALS=26
    NOT_EQUALS=27
    LESS=28
    LESS_EQUALS=29
    GREATER=30
    GREATER_EQUALS=31
    LOGICAL_AND=32
    LOGICAL_OR=33
    LOGICAL_NOT=34
    COLON=35
    ASSIGN=36
    PLUS_ASSIGN=37
    MINUS_ASSIGN=38
    MULT_ASSIGN=39
    DIV_ASSIGN=40
    MOD_ASSIGN=41
    DECLARE_ASSIGN=42
    ACCESS=43
    L_PAREN=44
    R_PAREN=45
    L_CURLY=46
    R_CURLY=47
    L_BRACKET=48
    R_BRACKET=49
    COMMA=50
    SEMI=51
    ID=52
    DECIMAL_LIT=53
    BINARY_LIT=54
    OCTAL_LIT=55
    HEX_LIT=56
    FLOAT_LIT=57
    STRING_LIT=58
    TERMINATOR=59
    WS=60
    LINE_COMMENT=61
    COMMENT=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.decl_list()
            self.state = 171
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def top_level_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Top_level_declContext,0)


        def eos(self):
            return self.getTypedRuleContext(MiniGoParser.EosContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(MiniGoParser.Decl_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl_list




    def decl_list(self):

        localctx = MiniGoParser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.top_level_decl()
                self.state = 174
                self.eos()
                self.state = 175
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.top_level_decl()
                self.state = 178
                self.eos()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Top_level_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_top_level_decl




    def top_level_decl(self):

        localctx = MiniGoParser.Top_level_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_top_level_decl)
        try:
            self.state = 185
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.funcdecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self.method_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 184
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def type_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Type_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 190
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 187
                self.vardecl()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.constdecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 189
                self.type_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MiniGoParser.StmtContext,0)


        def eos(self):
            return self.getTypedRuleContext(MiniGoParser.EosContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(MiniGoParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt_list




    def stmt_list(self):

        localctx = MiniGoParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt_list)
        try:
            self.state = 199
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 192
                self.stmt()
                self.state = 193
                self.eos()
                self.state = 194
                self.stmt_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 196
                self.stmt()
                self.state = 197
                self.eos()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.For_stmtContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniGoParser.AssignmentContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Break_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Continue_stmtContext,0)


        def call_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_stmt




    def stmt(self):

        localctx = MiniGoParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 210
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 201
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.constdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 203
                self.if_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 204
                self.for_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 205
                self.assignment()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 206
                self.break_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 207
                self.continue_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 208
                self.call_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 209
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs_prime(self):
            return self.getTypedRuleContext(MiniGoParser.Lhs_primeContext,0)


        def ACCESS(self):
            return self.getToken(MiniGoParser.ACCESS, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def index(self):
            return self.getTypedRuleContext(MiniGoParser.IndexContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_lhs




    def lhs(self):

        localctx = MiniGoParser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_lhs)
        try:
            self.state = 219
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.lhs_prime(0)
                self.state = 216
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [43]:
                    self.state = 213
                    self.match(MiniGoParser.ACCESS)
                    self.state = 214
                    self.match(MiniGoParser.ID)
                    pass
                elif token in [48]:
                    self.state = 215
                    self.index()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 218
                self.match(MiniGoParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Lhs_primeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs_ele(self):
            return self.getTypedRuleContext(MiniGoParser.Lhs_eleContext,0)


        def lhs_prime(self):
            return self.getTypedRuleContext(MiniGoParser.Lhs_primeContext,0)


        def ACCESS(self):
            return self.getToken(MiniGoParser.ACCESS, 0)

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def index(self):
            return self.getTypedRuleContext(MiniGoParser.IndexContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_lhs_prime



    def lhs_prime(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MiniGoParser.Lhs_primeContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_lhs_prime, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 222
            self.lhs_ele()
            self._ctx.stop = self._input.LT(-1)
            self.state = 232
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MiniGoParser.Lhs_primeContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_lhs_prime)
                    self.state = 224
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 228
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [43]:
                        self.state = 225
                        self.match(MiniGoParser.ACCESS)
                        self.state = 226
                        self.match(MiniGoParser.ID)
                        pass
                    elif token in [48]:
                        self.state = 227
                        self.index()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 234
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Lhs_eleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniGoParser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(MiniGoParser.Func_callContext,0)


        def method_call(self):
            return self.getTypedRuleContext(MiniGoParser.Method_callContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_lhs_ele




    def lhs_ele(self):

        localctx = MiniGoParser.Lhs_eleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_lhs_ele)
        try:
            self.state = 238
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 235
                self.match(MiniGoParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 236
                self.func_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 237
                self.method_call()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(MiniGoParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_return_stmt




    def return_stmt(self):
